--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "tsdx build",
     "test": "tsdx test",
     "lint": "tsdx lint",
-    "prepare": "tsdx build"
+    "prepare": "tsdx build",
+    "prettier": "prettier {src,test}/*.ts --write"
   },
   "peerDependencies": {},
   "husky": {
